--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react": "^17.0.44",
     "@types/react-dom": "^17.0.15",
     "@types/uuid": "^8.3.4",
+    "axios": "^0.27.2",
     "jest-image-snapshot": "^5.1.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
