--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-redux": "^8.0.1",
     "react-scripts": "5.0.0",
     "redux": "^4.2.0",
+    "redux-thunk": "^2.4.1",
     "start-server-and-test": "^1.14.0",
     "typescript": "^4.6.3",
     "web-vitals": "^2.1.4"
