--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "@types/react-dom": "^17.0.15",
     "@types/uuid": "^8.3.4",
     "axios": "^0.27.2",
+    "formik": "^2.2.9",
     "jest-image-snapshot": "^5.1.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-redux": "^8.0.1",
+    "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.0",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.1",
